--- a/src/main/resources/templates/CadastroTitulo.html
+++ b/src/main/resources/templates/CadastroTitulo.html
@@ -20,38 +20,38 @@
     <h5 class="card-header">Novo Titulo</h5>
 
     <div class="card-body">
-        <form>
+        <form method="post" action="/titulos">
             <div class="form-group">
                 <div class="form-group row">
                     <label for="descricao" class="col-sm-2 control-label">Descrição</label>
                     <div class="col-sm-4">
-                        <input type="text" class="form-control form-control-sm" id="descricao">
+                        <input type="text" class="form-control form-control-sm" id="descricao" name="descricao">
                     </div>
                 </div>
             </div>
             <div class="form-group row">
                 <label for="dataVencimento" class="col-sm-2 control-label">Data de vencimento</label>
                 <div class="col-sm-2">
-                    <input type="text" class="form-control form-control-sm" id="dataVencimento">
+                    <input type="text" class="form-control form-control-sm" id="dataVencimento" name="dataVencimento">
                 </div>
             </div>
             <div class="form-group row">
                 <label for="valor" class="col-sm-2 control-label">Valor</label>
                 <div class="col-sm-2">
-                    <input type="text" class="form-control form-control-sm" id="valor">
+                    <input type="text" class="form-control form-control-sm" id="valor" name="valor">
                 </div>
             </div>
             <div class="form-group row">
                 <label  class="col-sm-2 control-label">Status</label>
                 <div class="col-sm-2">
-                    <select class="form-control form-control-sm">
-                        <option>Pendente</option>
-                        <option>Recebido</option>
+                    <select class="form-control form-control-sm" name="status">
+                        <option value="PENDENTE">Pendente</option>
+                        <option VALUE="RECEBIDO">Recebido</option>
                     </select>
                 </div>
             </div>
             <div class="form-group">
-                <div class="col-sm-4 offset-sm-2">
+                <div class="offset-sm-2">
                 <button type="submit" class="btn btn-primary">Salvar</button>
                 </div>
             </div>
