--- a/src/main/resources/templates/CadastroTitulo.html
+++ b/src/main/resources/templates/CadastroTitulo.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-br" xmlns:th="http://thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Cadastro de título</title>
@@ -21,6 +21,14 @@
 
     <div class="card-body">
         <form method="post" action="/titulos">
+            <div class="alert alert-success alert-dismissible fade show" role="alert"
+                th:if="${!#strings.isEmpty(mensagem)}">
+                <span th:text="${mensagem}"></span>
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+
             <div class="form-group">
                 <div class="form-group row">
                     <label for="descricao" class="col-sm-2 control-label">Descrição</label>
@@ -45,8 +53,10 @@
                 <label  class="col-sm-2 control-label">Status</label>
                 <div class="col-sm-2">
                     <select class="form-control form-control-sm" name="status">
-                        <option value="PENDENTE">Pendente</option>
-                        <option VALUE="RECEBIDO">Recebido</option>
+                        <option th:each="status : ${allStatus}"
+                                th:value="${status}"
+                                th:text="${status.getDescricao()}"></option>
+
                     </select>
                 </div>
             </div>
