--- a/src/main/resources/templates/CadastroTitulo.html
+++ b/src/main/resources/templates/CadastroTitulo.html
@@ -14,33 +14,39 @@
     </div>
 
     <div class="card-body">
-        <form method="post" action="/titulos">
+        <form method="post" action="/titulos" th:object="${titulo}">
             <div class="alert alert-success alert-dismissible fade show" role="alert"
                  th:if="${!#strings.isEmpty(mensagem)}">
                 <span th:text="${mensagem}"></span>
-                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
+            </div>
+            <div class="alert alert-danger alert-dismissible fade show" role="alert"
+                 th:if="${#fields.hasAnyErrors()}">
+                <div th:each="detailedError : ${#fields.detailedErrors()}">
+                      <span th:text="${detailedError.message}"></span>
+                </div>
             </div>
 
             <div class="form-group">
                 <div class="form-group row">
                     <label for="descricao" class="col-sm-2 control-label">Descrição</label>
                     <div class="col-sm-4">
-                        <input type="text" class="form-control form-control-sm" id="descricao" name="descricao">
+                        <input type="text" class="form-control form-control-sm" id="descricao" th:field="*{descricao}"
+                               th:classappend="${#fields.hasErrors('descricao')} ? 'is-invalid'">
                     </div>
                 </div>
             </div>
             <div class="form-group row">
-                <label for="dataVencimento" class="col-sm-2 control-label">Data de vencimento</label>
+                <label for="dataVencimento" class="col-sm-2 control-label">Data de vencimento*</label>
                 <div class="col-sm-2">
-                    <input type="text" class="form-control form-control-sm" id="dataVencimento" name="dataVencimento">
+                    <input type="text" class="form-control form-control-sm" id="dataVencimento" th:field="*{dataVencimento}"
+                           th:classappend="${#fields.hasErrors('dataVencimento')} ? 'is-invalid'">
                 </div>
             </div>
             <div class="form-group row">
                 <label for="valor" class="col-sm-2 control-label">Valor</label>
                 <div class="col-sm-2">
-                    <input type="text" class="form-control form-control-sm" id="valor" name="valor">
+                    <input type="text" class="form-control form-control-sm" id="valor" th:field="*{valor}"
+                           th:classappend="${#fields.hasErrors('valor')} ? 'is-invalid'">
                 </div>
             </div>
             <div class="form-group row">
