--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -16,7 +16,7 @@
 <nav class="navbar navbar-dark bg-dark">
     <a class="navbar-brand" href="#">Controle de Titulos</a>
 </nav>
-<div class="container">
+<div class="container-fluid" style="width: 90%">
 <section layout:fragment="conteudo">
 
 </section>
