--- a/src/main/resources/templates/CadastroTitulo.html
+++ b/src/main/resources/templates/CadastroTitulo.html
@@ -16,16 +16,8 @@
     <div class="card-body">
         <form method="post" action="/titulos" th:object="${titulo}">
             <input hidden th:field="*{codigo}">
-            <div class="alert alert-success alert-dismissible fade show" role="alert"
-                 th:if="${!#strings.isEmpty(mensagem)}">
-                <span th:text="${mensagem}"></span>
-            </div>
-            <div class="alert alert-danger alert-dismissible fade show" role="alert"
-                 th:if="${#fields.hasAnyErrors()}">
-                <div th:each="detailedError : ${#fields.detailedErrors()}">
-                      <span th:text="${detailedError.message}"></span>
-                </div>
-            </div>
+           <div layout:insert="~{mensagemGeral}"></div>
+           <div layout:insert="~{mensagemErro}"></div>
 
             <div class="form-group">
                 <div class="form-group row">
