--- a/src/main/resources/templates/PesquisaTitulo.html
+++ b/src/main/resources/templates/PesquisaTitulo.html
@@ -14,13 +14,7 @@
         </div>
 
         <div class="card-body">
-            <div class="alert alert-success alert-dismissible fade show" role="alert"
-                 th:if="${!#strings.isEmpty(mensagem)}">
-                <span th:text="${mensagem}"></span>
-                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
+<div layout:insert="~{mensagemGeral}"></div>
             <div class="table-responsive-sm">
                 <table class="table table-bordered table-striped table-sm">
                     <thead>
@@ -44,12 +38,23 @@
                             th:classappend="${#strings.toString(titulo.status) == 'PENDENTE' ?'badge-danger' : 'badge-success'}"></span>
                         </td>
                         <td class="text-center">
-                            <a class="btn btn-link"th:href="@{/titulos/{codigo}(codigo=${titulo.codigo})}">
+                            <a class="btn btn-link" th:href="@{/titulos/{codigo}(codigo=${titulo.codigo})}">
                                 <svg class="bi bi-pencil-square text-primary" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M15.502 1.94a.5.5 0 010 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 01.707 0l1.293 1.293zm-1.75 2.456l-2-2L4.939 9.21a.5.5 0 00-.121.196l-.805 2.414a.25.25 0 00.316.316l2.414-.805a.5.5 0 00.196-.12l6.813-6.814z"/>
                                     <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 002.5 15h11a1.5 1.5 0 001.5-1.5v-6a.5.5 0 00-1 0v6a.5.5 0 01-.5.5h-11a.5.5 0 01-.5-.5v-11a.5.5 0 01.5-.5H9a.5.5 0 000-1H2.5A1.5 1.5 0 001 2.5v11z" clip-rule="evenodd"/>
                                 </svg>
                             </a>
+                                <button class="btn btn-link" data-toggle="modal" data-target="#delete-modals"
+                                        th:attr="data-codigo=${titulo.codigo},
+                                        data-descricao=${titulo.descricao} "
+                                        data-href=/titulos/excluir>
+                                <svg class="bi bi-x-square text-danger" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                    <path fill-rule="evenodd" d="M14 1H2a1 1 0 00-1 1v12a1 1 0 001 1h12a1 1 0 001-1V2a1 1 0 00-1-1zM2 0a2 2 0 00-2 2v12a2 2 0 002 2h12a2 2 0 002-2V2a2 2 0 00-2-2H2z" clip-rule="evenodd"/>
+                                    <path fill-rule="evenodd" d="M11.854 4.146a.5.5 0 010 .708l-7 7a.5.5 0 01-.708-.708l7-7a.5.5 0 01.708 0z" clip-rule="evenodd"/>
+                                    <path fill-rule="evenodd" d="M4.146 4.146a.5.5 0 000 .708l7 7a.5.5 0 00.708-.708l-7-7a.5.5 0 00-.708 0z" clip-rule="evenodd"/>
+                                </svg>
+                                    </button>
+
                         </td>
                     </tr>
                     <tr>
@@ -60,5 +65,7 @@
             </div>
         </div>
     </div>
+
+    <div layout:insert="~{DialogoConfirmacaoExclusao}"></div>
 </section>
 </html>
