--- a/src/main/resources/templates/CadastroTitulo.html
+++ b/src/main/resources/templates/CadastroTitulo.html
@@ -31,8 +31,10 @@
             <div class="form-group row">
                 <label for="dataVencimento" class="col-sm-2 control-label">Data de vencimento*</label>
                 <div class="col-sm-2">
-                    <input type="text" class="form-control form-control-sm" id="dataVencimento" th:field="*{dataVencimento}"
-                           th:classappend="${#fields.hasErrors('dataVencimento')} ? 'is-invalid'">
+                    <input type="text" class="form-control form-control-sm datepicker" id="dataVencimento" th:field="*{dataVencimento}" autocomplete="off"
+                           th:classappend="${#fields.hasErrors('dataVencimento')} ? 'is-invalid'"
+                           data-provide="datepicker" data-date-format="dd/mm/yyyy" data-date-language="pt-BR"
+                           data-date-autoclose="true" data-date-today-highlight="true" data-date-orientation="bottom">
                 </div>
             </div>
             <div class="form-group row">
