--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -3,20 +3,22 @@
                     xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="viewport" content="width=device-width">
     <title>Cobrança</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
           crossorigin="anonymous">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.standalone.min.css">
-
+<link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
 
 <nav class="navbar navbar-dark bg-dark">
     <a class="navbar-brand" href="#">Controle de Titulos</a>
 </nav>
-<div class="container-fluid" style="width: 90%">
+<div class="container-fluid">
 <section layout:fragment="conteudo">
 
 </section>
